updated test to have working game api call

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-server",
+  "name": "ullr-tavern-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -16,6 +16,7 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2",
     "stripe": "^8.67.0"
