--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "concurrently": "^5.1.0"
   },
-  "engines" : { 
-    "npm" : "8.19.2",
-    "node" : "16.18.0"
+  "dependencies": {
+    "axios": "^1.4.0"
+  },
+  "engines": {
+    "npm": "8.19.2",
+    "node": "16.18.0"
   }
 }
