--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "react-modal": "^3.16.1"
   },
   "engines": {
     "npm": "8.19.2",
