--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,10 @@
     "@testing-library/user-event": "^7.2.1",
     "dotenv": "^16.3.1",
     "graphql": "^15.4.0",
-    "jquery": "^3.7.1",
-    "jquery-ui": "^1.13.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1"
   },
