--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2",
-    "stripe": "^8.67.0"
+    "stripe": "^8.67.0",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
