--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "react-bootstrap": "^2.8.0",
     "react-modal": "^3.16.1"
   },
   "engines": {
