--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-bootstrap": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
