--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react-bootstrap": "^2.8.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2"
   },
   "engines": {
     "npm": "8.19.2",
